// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Projection Side Menu renders 1`] = `
<div
  className="ui segment ui form"
>
  <div
    className="ui dividing header"
  >
    Standard
  </div>
  <div
    className="ui form "
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div
          className="vertical-bfaadidijh"
        >
          <div
            className="ui secondary vertical menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div />
          <div
            className="ui segment"
            style={
              Object {
                "float": "left",
              }
            }
          >
            <div
              className="ui form "
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="name"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="address"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui dividing header"
  >
    Readonly
  </div>
  <div
    className="ui form form-hjcaghiia"
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div
          className="vertical-bfaadidijh"
        >
          <div
            className="ui secondary vertical menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div />
          <div
            className="ui segment"
            style={
              Object {
                "float": "left",
              }
            }
          >
            <div
              className="ui form form-hjcaghiia"
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="name"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="address"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Projection Tabular renders 1`] = `
<div
  className="ui segment ui form"
>
  <div
    className="ui dividing header"
  >
    Standard
  </div>
  <div
    className="ui form "
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div>
          <div
            className="ui top attached tabular menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div
            className="ui bottom attached segment"
          >
            <div
              className="ui form "
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="name"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="address"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui dividing header"
  >
    Readonly
  </div>
  <div
    className="ui form form-hjcaghiia"
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div>
          <div
            className="ui top attached tabular menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div
            className="ui bottom attached segment"
          >
            <div
              className="ui form form-hjcaghiia"
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="name"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="address"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Projection Top Menu renders 1`] = `
<div
  className="ui segment ui form"
>
  <div
    className="ui dividing header"
  >
    Standard
  </div>
  <div
    className="ui form "
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div>
          <div
            className="ui secondary menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div
            className="ui segment"
          >
            <div
              className="ui form "
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="name"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui input"
                  >
                    <input
                      name="address"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui dividing header"
  >
    Readonly
  </div>
  <div
    className="ui form form-hjcaghiia"
  >
    <div
      className="fields"
    >
      <div
        className="sixteen wide field"
      >
        <div>
          <div
            className="ui secondary menu"
          >
            <a
              className="active item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="user icon"
                onClick={[Function]}
              />
              Person
            </a>
            <a
              className="item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="car icon"
                onClick={[Function]}
              />
              Car
            </a>
          </div>
          <div
            className="ui segment"
          >
            <div
              className="ui form form-hjcaghiia"
            >
              <div
                className="fields"
              >
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="name"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="eight wide field"
                >
                  <label
                    htmlFor="address"
                  >
                    Address
                  </label>
                  <div
                    className="ui disabled input"
                  >
                    <input
                      disabled={true}
                      name="address"
                      onChange={[Function]}
                      tabIndex={-1}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
